# hiapi-seedance-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: image_to_video.py  text_to_video.py
src/hiapi_seedance/: __init__.py  client.py  errors.py  models.py
tests/: _server.py  conftest.py  test_seedance.py
